logs/django-qbe.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_picklefield-1.0.0.dist-info'...
Listing './lib/python3.5/site-packages/django_qbe'...
Compiling './lib/python3.5/site-packages/django_qbe/forms.py'...
***   File "./lib/python3.5/site-packages/django_qbe/forms.py", line 136
    raise forms.ValidationError, validation_message
                               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/django_qbe/locale'...
Listing './lib/python3.5/site-packages/django_qbe/locale/en'...
Listing './lib/python3.5/site-packages/django_qbe/locale/en/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/django_qbe/locale/fr_CA'...
Listing './lib/python3.5/site-packages/django_qbe/locale/fr_CA/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/django_qbe/savedqueries'...
Listing './lib/python3.5/site-packages/django_qbe/savedqueries/management'...
Listing './lib/python3.5/site-packages/django_qbe/savedqueries/management/commands'...
Listing './lib/python3.5/site-packages/django_qbe/savedqueries/migrations'...
Listing './lib/python3.5/site-packages/django_qbe/static'...
Listing './lib/python3.5/site-packages/django_qbe/static/django_qbe'...
Listing './lib/python3.5/site-packages/django_qbe/static/django_qbe/css'...
Listing './lib/python3.5/site-packages/django_qbe/static/django_qbe/img'...
Listing './lib/python3.5/site-packages/django_qbe/static/django_qbe/js'...
Listing './lib/python3.5/site-packages/django_qbe/templates'...
Listing './lib/python3.5/site-packages/django_qbe/templates/admin'...
Listing './lib/python3.5/site-packages/django_qbe/templates/admin/savedqueries'...
Listing './lib/python3.5/site-packages/django_qbe/templates/admin/savedqueries/savedquery'...
Listing './lib/python3.5/site-packages/django_qbe/templatetags'...
Compiling './lib/python3.5/site-packages/django_qbe/utils.py'...
***   File "./lib/python3.5/site-packages/django_qbe/utils.py", line 402
    print "Combine % elements" % len(graphs)
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/django_qbe-0.3.0.egg-info'...
Listing './lib/python3.5/site-packages/picklefield'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
